fix overflow

--- a/meltline.css
+++ b/meltline.css
@@ -5457,6 +5457,9 @@ svg {
 .word-break-all {
   word-break: break-all;
 }
+.word-break-word {
+  word-break: break-word;
+}
 .word-break-keep {
   word-break: keep-all;
 }
@@ -5523,13 +5526,13 @@ textarea.input {
  * overflow
  */
 .overflow-hidden {
-  overflow: hidden;
+  overflow: hidden !important;
 }
 .overflow-auto {
-  overflow: auto;
+  overflow: auto !important;
 }
 .overflow-scroll {
-  overflow: scroll;
+  overflow: scroll !important;
   -webkit-overflow-scrolling: touch;
   overflow-scrolling: touch;
 }
