--- a/src/font.less
+++ b/src/font.less
@@ -76,6 +76,9 @@
 .word-break-all {
   word-break: break-all;
 }
+.word-break-word {
+  word-break: break-word;
+}
 .word-break-keep {
   word-break: keep-all;
 }
