--- a/src/util.less
+++ b/src/util.less
@@ -11,13 +11,13 @@
  * overflow
  */
 .overflow-hidden {
-  overflow: hidden;
+  overflow: hidden !important;
 }
 .overflow-auto {
-  overflow: auto;
+  overflow: auto !important;
 }
 .overflow-scroll {
-  overflow: scroll;
+  overflow: scroll !important;
   -webkit-overflow-scrolling: touch;
   overflow-scrolling: touch;
 }
